Fix inline outline in a corner case

In the corner case, an anoymous block contains an inline which has
outline and continuation. Previously when we calculated visual overflow
of the anonymous block during layout, the layout of continuation might
not be up-to-date causing inaccurate outline visual overflow.

Now re-add visual overflow of inline children of the anonymous block
when calculating parent's overflow which happens when layout of
continuation is clean.

This CL causes addOverflowFromInlineChildren() to be called twice in
each overflow recalc or layout cycle for each block with
containsInlineWithOutlineAndContinuation(), but this keeps the change
simplest for the rare case.

BUG=703403

Review-Url: https://codereview.chromium.org/2794663002
Cr-Commit-Position: refs/heads/master@{#461260}

Former-commit-id: eefd3fc93296ee6b3ef9c5055d024573d8c7f63d